--- a/doc/man/julia.1
+++ b/doc/man/julia.1
@@ -26,7 +26,7 @@
 
 .\" from the front page of http://julialang.org/
 .SH NAME
-julia, julia-basic - high-level, high-performance dynamic programming language for technical computing
+julia - high-level, high-performance dynamic programming language for technical computing
 
 .SH SYNOPSIS
 julia [option] [program] [args..]
@@ -49,8 +49,6 @@ of argument types, which can also be user-defined.
 For a more in-depth discussion of the rationale and advantages of Julia
 over other systems, please see the online manual:
 http://docs.julialang.org/en/latest/manual/
-
-\fBjulia\fP is an alias for \fBjulia-basic\fP.
 
 If a Julia source file is given as \fIprogram\fP (possibly with arguments in
 \fIargs\fP) then, instead of launching an interactive session, Julia executes
